letsencrypt/dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: letsencrypt
  name: letsencrypt
spec:
  replicas: 1
  selector:
    app: letsencrypt
    deploymentconfig: letsencrypt
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: letsencrypt
        deploymentconfig: letsencrypt
    spec:
      containers:
      - image: wp-lorawan/letsencrypt:latest
        imagePullPolicy: Always
        name: letsencrypt
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /data
          name: data
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: letsencrypt-data
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - letsencrypt
      from:
        kind: ImageStreamTag
        name: letsencrypt:latest
        namespace: wp-lorawan
    type: ImageChange
