letsencrypt/route.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: letsencrypt
    name: ssl-le
  spec:
    host: lorawan.weepee.io
    path: /.well-known/acme-challenge
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: letsencrypt
kind: List
metadata: {}
